// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrowdsaleStartTime Rendering should render CrowdsaleStartTime component 1`] = `
<div
  className="sw-InputField "
>
  <div
    className="sw-FormControlTitle"
  >
    <label
      className="sw-FormControlTitle_Label"
    >
      Start Time
    </label>
    <div
      className="sw-FormControlTitle_Info"
      tabIndex="-1"
    >
      <span
        className="sw-FormControlTitle_Tooltip"
      >
        Date and time when the tier starts. Can't be in the past from the current moment.
      </span>
    </div>
  </div>
  <input
    className="sw-TextField"
    disabled={false}
    id="tiers[0].startTime"
    name="tiers[0].startTime"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="datetime-local"
    value={1520852700000}
  />
</div>
`;

exports[`CrowdsaleStartTime Rendering should render CrowdsaleStartTime component if field is disabled 1`] = `
<div
  className="sw-InputField "
>
  <div
    className="sw-FormControlTitle"
  >
    <label
      className="sw-FormControlTitle_Label"
    >
      Start Time
    </label>
    <div
      className="sw-FormControlTitle_Info"
      tabIndex="-1"
    >
      <span
        className="sw-FormControlTitle_Tooltip"
      >
        Date and time when the tier starts. Can't be in the past from the current moment.
      </span>
    </div>
  </div>
  <input
    className="sw-TextField"
    disabled={true}
    id="tiers[0].startTime"
    name="tiers[0].startTime"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="datetime-local"
    value={1520852700000}
  />
</div>
`;
